<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">luca</string>
    <string name="unknown">Unknown</string>
    <string name="feature_unavailable">Available soon</string>
    <string name="url_terms_and_conditions">https://luca-app.de/app-terms-and-conditions</string>
    <string name="url_privacy_policy">https://luca-app.de/app-privacy-policy</string>
    <string name="url_imprint">https://luca-app.de/imprint</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="action_ok">@android:string/ok</string>
    <string name="action_cancel">@android:string/cancel</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_no_thanks">No thanks</string>
    <string name="action_stop">Stop</string>
    <string name="action_retry">Retry</string>
    <string name="action_resolve">Resolve</string>
    <string name="action_continue">Continue</string>
    <string name="action_finish">Finish</string>
    <string name="action_grant">Grant</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_update">Update</string>
    <string name="action_enable">Enable</string>
    <string name="error_generic_title">Something went wrong</string>
    <string name="error_generic_description">An unexpected error occurred. Please get in touch if this issue persists.</string>
    <string name="error_specific_title">Error: <xliff:g example="HttpException" id="exceptionType">%1$s</xliff:g></string>
    <string name="error_specific_description">An unexpected error occurred:\n\n<xliff:g example="Request not authorized, status code 401" id="exceptionMessage">%1$s</xliff:g>\n\nPlease get in touch if this issue persists.</string>
    <string name="error_request_failed_title">Request failed</string>
    <string name="error_no_network_connection">No network connection</string>
    <string name="error_check_in_failed">Check-in failed</string>
    <string name="error_location_not_found">It is not possible to check in here any more.</string>
    <string name="error_qr_code_broken">QR-Code is invalid. Please try a different one.</string>
    <string name="error_certificate_pinning_title">Unexpected server certificates</string>
    <string name="error_certificate_pinning_description">When attempting to establish a secure connection to the luca servers, we found untrusted certificates.\n\nPlease try switching your network and make sure that you\'re using the latest app version.</string>
    <string name="error_timestamp_offset_title">Wrong phone time</string>
    <string name="error_timestamp_offset_description">We noticed that your phone time is not in sync with our server. Please open your system settings and make sure that your phone time is correct. Using luca with a wrong phone time can lead to unexpected issues.</string>
    <string name="status_check_out_in_progress">Checking out…</string>
    <string name="status_check_out_succeeded">Checked out</string>
    <string name="status_check_out_failed">Checkout failed</string>
    <string name="notification_channel_status_title">Status</string>
    <string name="notification_channel_status_description">Indicates that luca is running.</string>
    <string name="notification_channel_access_title">Data accesses</string>
    <string name="notification_channel_access_description">Informs you if a health department has accessed check-ins related to you.</string>
    <string name="notification_channel_event_title">Information</string>
    <string name="notification_channel_event_description">Informs you about events that happened within luca.</string>
    <string name="notification_service_title">Checked in</string>
    <string name="notification_service_description">@string/notification_checked_in_at_description</string>
    <string name="notification_error_title">luca encountered a problem</string>
    <string name="notification_checked_in_at_title">Checked in at <xliff:g example="neXenio" id="companyName">%1$s</xliff:g></string>
    <string name="notification_checked_in_at_description">You\'re currently checked in. Please remember to check out when leaving the location.</string>
    <string name="notification_meeting_host_title">Private meeting</string>
    <string name="notification_meeting_host_description">You\'re currently hosting a private meeting. Please end it as soon as your guests left.</string>
    <string name="notification_service_error_title">luca is having issues</string>
    <string name="notification_data_accessed_title">@string/accessed_data_dialog_title</string>
    <string name="notification_data_accessed_description">A health department has requested your contact data.</string>
    <string name="notification_auto_checkout_triggered_title">@string/auto_checkout_info_title</string>
    <string name="notification_auto_checkout_triggered_description">You\'ve left the location and have been checked out automatically.</string>
    <string name="notification_action_stop_service">Stop service</string>
    <string name="notification_action_check_out">Check out</string>
    <string name="notification_action_end_meeting">@string/meeting_end_action</string>
    <string name="welcome_app_slogan">Experience life together.</string>
    <string name="welcome_heading">Hello</string>
    <string name="welcome_description">luca helps you encrypt and securely submit your contact data. With luca, you don\'t have to worry about your data when visiting events, restaurants, cafés or bars anymore.</string>
    <string name="welcome_terms_description">Accept <a href="https://luca-app.de/app-terms-and-conditions">terms of use</a></string>
    <string name="welcome_terms_checkbox_content_description">Terms of Use</string>
    <string name="welcome_privacy_description">Accept <a href="https://luca-app.de/app-privacy-policy">privacy policy</a></string>
    <string name="welcome_privacy_checkbox_content_description">Privacy Policy</string>
    <string name="welcome_action">Get started!</string>
    <string name="fake_check_in_app_name">Fake Check-In</string>
    <string name="fake_checkin_action">Check-In!</string>
    <string name="pre_registration_heading">Your contact data</string>
    <string name="pre_registration_description">Please enter your contact data in the next step.\n\nYour data will be encrypted. Only a health department can decrypt it during contact tracing.</string>
    <string name="missing_permission_arg">Missing %1$s Permission</string>
    <string name="permission_name_location">Location</string>
    <string name="permission_name_camera">Camera</string>
    <string name="registration_first_name">First name</string>
    <string name="registration_last_name">Last name</string>
    <string name="registration_street">Street</string>
    <string name="registration_house_number">Number</string>
    <string name="registration_postal_code">Postal code</string>
    <string name="registration_city_name">City</string>
    <string name="registration_phone_number">Phone number</string>
    <string name="registration_email">Email (optional)</string>
    <string name="registration_heading_name">What\'s your name?</string>
    <string name="registration_heading_address">Where do you live?</string>
    <string name="registration_heading_contact">How can you be contacted?</string>
    <string name="registration_missing_info">Info missing</string>
    <string name="registration_missing_fields_error_text">Please provide your name, phone number and address.</string>
    <string name="registration_will_delete_tests_title">Save changes?</string>
    <string name="registration_will_delete_tests_text">"By changing your name, imported test results will be deleted. Apply all changes?"</string>
    <string name="registration_invalid_value_field_error">This value is not valid</string>
    <string name="registration_empty_but_required_field_error">This field is required</string>
    <string name="registration_missing_first_name_hint">Please enter your first name to continue.</string>
    <string name="registration_missing_last_name_hint">Please enter your last name to continue.</string>
    <string name="registration_missing_phone_number_hint">Please enter your phone number to continue.</string>
    <string name="registration_missing_street_hint">Please enter your street to continue.</string>
    <string name="registration_missing_house_number_hint">Please enter your house number to continue.</string>
    <string name="registration_missing_postal_code_hint">Please enter your zip code to continue.</string>
    <string name="registration_missing_city_hint">Please enter your city to continue.</string>
    <string name="registration_address_mandatory">Hosts must collect the addresses of their guests. Therefore, in order to use luca, it\'s mandatory to enter your address.</string>
    <string name="registration_contact_info">Please provide a correct mobile or landline number. This number will be used for verification. You can choose if you want to provide an email address.</string>
    <string name="registration_address_info">Hosts usually have to collect the addresses of their guests. Therefore, in order to use luca, it\'s mandatory to provide your address.</string>
    <string name="onboarding_info_heading">Your contact data</string>
    <string name="onboarding_info_description">Please enter your contact data in the next step.\n\nYour data will be encrypted. Only health departments can decrypt it.</string>
    <string name="onboarding_info_action">Got it</string>
    <string name="onboarding_completed_heading">That\'s it!</string>
    <string name="onboarding_completed_description">You can now share your encrypted contact data by presenting your QR code or by scanning a code from a place that uses luca.\n\nChecking in is possible at places that use luca or private meetings with other luca App users.</string>
    <string name="onboarding_completed_action">Done</string>
    <string name="navigation_check_in">Check-In</string>
    <string name="navigation_contact_data">Contact data</string>
    <string name="navigation_venue_list">Venues</string>
    <string name="navigation_venue_details">@string/navigation_venue_list</string>
    <string name="navigation_history">History</string>
    <string name="navigation_meeting">@string/meeting_heading</string>
    <string name="navigation_accessed_data">@string/accessed_data_heading</string>
    <string name="navigation_my_luca">@string/my_luca_heading</string>
    <string name="menu_more_content_description">More Menu</string>
    <string name="menu_contact_data">Edit Contact Data</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="history_empty_title">No entries</string>
    <string name="history_empty_description">Your history collects all your activities from the last 14&#160;days. You don\'t have any entries during this period at the moment.</string>
    <string name="history_share">Share data</string>
    <string name="my_luca_empty_title">@string/history_empty_title</string>
    <string name="my_luca_empty_description">You haven\'t imported a test into the app yet. Please note that we only support certain test providers at the moment. Check with your test provider to see if it is included.</string>
    <string name="test_import_action">Import test result</string>
    <string name="test_import_hint">Scan the QR code of your test to store it in the app.</string>
    <string name="test_issued_by">Issued by</string>
    <string name="test_issued_at">Date of issue:</string>
    <string name="test_lab_doctor_name">Performed by</string>
    <string name="test_delete_button">Delete test</string>
</resources>