<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.culture4life.luca.ui.history.HistoryFragment">

    <TextView
            android:id="@+id/headingTextView"
            style="@style/TextAppearance.Luca.Headline2"
            android:text="@string/navigation_history"
            android:layout_margin="@dimen/spacing_default"
            app:layout_constraintEnd_toStartOf="@id/accessedDataImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/accessedDataImageView"
            style="@style/MenuImageView"
            android:contentDescription="@string/menu_more_content_description"
            android:src="@drawable/ic_eye"
            app:layout_constraintEnd_toStartOf="@id/menuImageView"
            app:layout_constraintBottom_toBottomOf="@id/headingTextView"
            app:layout_constraintTop_toTopOf="@id/headingTextView" />

    <ImageView
            android:id="@+id/menuImageView"
            style="@style/MenuImageView"
            android:contentDescription="@string/menu_more_content_description"
            app:layout_constraintBottom_toBottomOf="@id/headingTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/headingTextView" />

    <View
            android:id="@+id/headingSeparatorView"
            style="@style/HeaderSeparatorView"
            app:layout_constraintTop_toBottomOf="@id/headingTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/emptyTitleTextView"
            style="@style/EmptyStateTitleTextView"
            android:text="@string/history_empty_title"
            app:layout_constraintTop_toBottomOf="@id/headingSeparatorView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/emptyDescriptionTextView"
            style="@style/EmptyStateDescriptionTextView"
            android:text="@string/history_empty_description"
            app:layout_constraintTop_toBottomOf="@id/emptyTitleTextView"
            app:layout_constraintStart_toStartOf="@id/emptyTitleTextView"
            app:layout_constraintEnd_toEndOf="@id/emptyTitleTextView" />

    <ImageView
            android:id="@+id/emptyImageView"
            style="@style/EmptyStateImageView"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintTop_toBottomOf="@id/emptyDescriptionTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/emptyDescriptionTextView"
            app:layout_constraintEnd_toEndOf="@id/emptyDescriptionTextView" />

    <ListView
            android:id="@+id/historyListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:fadingEdgeLength="@dimen/spacing_large"
            android:listSelector="@android:color/transparent"
            android:requiresFadingEdge="vertical"
            app:layout_constraintBottom_toTopOf="@id/primaryActionButton"
            app:layout_constraintTop_toBottomOf="@id/headingSeparatorView"
            tools:listitem="@layout/history_list_item" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/primaryActionButton"
            style="@style/Button.Luca.PrimaryActionButton"
            android:text="@string/history_share"
            android:layout_margin="@dimen/spacing_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>